--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.5.2",
+    "chakra-dayzed-datepicker": "^0.3.0",
+    "chakra-ui-autocomplete": "^1.4.5",
+    "date-fns": "^3.6.0",
+    "dayzed": "^3.2.3",
     "framer-motion": "^6.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
