--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "date-fns": "^3.6.0",
     "dayzed": "^3.2.3",
     "framer-motion": "^6.5.1",
+    "pretendard": "^1.3.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^3.11.0",
